# Scavengarr

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.prod  LICENSE  README.md  docker-compose.yml  flake.nix  indexers  pyproject.toml  temp_user_task_input.txt  tree.txt  wget-log
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
data/: config.yaml
docker/: Dockerfile  otel-config.yaml
docs/: PYTHON-BEST-PRACTICES.md  api.md  architecture.md  configuration.md  crawljob.md  deployment.md  development.md  index.md  plugins.md
docs/architecture/: clean-architecture.md  codeplan.md
docs/features/: FEATURES.md  README.md  configuration.md  crawljob-system.md  hoster-resolvers.md  link-validation.md  mirror-url-fallback.md  multi-stage-scraping.md  plugin-scoring-and-probing.md  plugin-system.md  prowlarr-integration.md  python-plugins.md  stremio-addon.md  torznab-api.md
docs/plans/: integration-tests.md  more-plugins.md  playwright-engine.md  search-caching.md
docs/refactor/COMPLETED/: clean-architecture-migration.md  german-english-translation.md  pydantic-domain-removal.md
openspec/: project.md
openspec/changes/add-config-system/: design.md  proposal.md  tasks.md
openspec/changes/add-plugin-loader/: design.md  proposal.md  tasks.md
plugins/: animeloads.py  aniworld.py  boerse.py  burningseries.py  byte.py  cine.py  cineby.py  crawli.py  dataload.py  ddlspot.py  ddlvalley.py  einschalten.py  filmfans.py  filmpalast.to.yaml  filmpalast_to.py  fireani.py  haschcon.py  hdfilme.py  hdsource.py  hdworld.py  jjs.py  kinoger.py  kinoking.py  kinox.py  megakino.py  megakino_to.py  moflix.py  movie2k.py  movie4k.py  movieblog.py  myboerse.py  mygully.py  nima4k.py  nox.py  scnlog.py  scnlog.yaml  scnsrc.py  serienfans.py  serienjunkies.py  sto.py  (+5 more)
src/scavengarr/application/: __init__.py  app_state.py  cli.py  main.py
src/scavengarr/infrastructure/: circuit_breaker.py  composition.py  (+4 more)
tests/: conftest.py
tests/benchmark/: conftest.py  test_concurrency_tuning.py  test_formula_validation.py  test_probe_validation_sweep.py
tests/e2e/: test_stremio_endpoint.py  test_stremio_series_e2e.py  test_stremio_streamable_e2e.py  test_torznab_endpoint.py
tests/integration/: conftest.py  test_config_loading.py  test_crawljob_lifecycle.py  test_link_validation.py  test_plugin_pipeline.py
tests/live/: conftest.py  test_plugin_smoke.py  test_resolver_live.py
(+312 files in other folders)
