[tool.poetry]
name = "scavengarr"
version = "0.1.0"
description = "Torznab OnClick Indexer"
packages = [{include = "scavengarr", from = "src"}]

[tool.poetry.scripts]
start = "scavengarr.interfaces.cli.cli:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12,<3.14"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
playwright = "^1.47"
scrapy = "^2.14.1"
python-json-logger = "^4.0.0"
structlog = "^25.5.0"
diskcache = "^5.6.3"
typer = "^0.21.1"
ruff = "^0.14.14"
pydantic-settings = ">=2.10.1,<2.11.0"
python-dotenv = ">=1.1.1,<1.2.0"
httpx = "^0.28.1"
lxml = ">=4.9,<6"
redis = {version = "^7.1.0", extras = ["redis"]}
guessit = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
requests = "^2.32.5"
ruff = "^0.14.13"
pre-commit = "^4.5.1"
respx = "^0.22.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
pytest-asyncio = "^1.3.0"
crewai = "^1.8.1"
crewai-tools = {extras = ["mcp"], version = "^1.8.1"}
openinference-instrumentation-crewai = "^0.1.17"
mcp = ">=1.16.0,<1.17.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]  # I = Import sorting (isort-Äquivalent)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
